--- a/common/locales/es.json
+++ b/common/locales/es.json
@@ -34,7 +34,8 @@
     "description": "Descripción del inmueble",
     "yearConstruction": "Año",
     "price": "Precio",
-    "rooms": "Habs.",
+    "rooms": "Habitaciones",
+    "roomsShort": "Habs.",
     "bathrooms": "Baños",
     "sqrMeters": "Superficie",
     "zone": "Zona",
