--- a/common/locales/es.json
+++ b/common/locales/es.json
@@ -158,8 +158,11 @@
       "zones": "Barrios"
     },
     "messages": {
-      "resultsInfo": "Mostrando {{pageSize}} resultados",
+      "resultsInfo": "Mostrando {{pageSize}} de {{resultsCount}} resultados",
       "noResults": "No se encontraron resultados"
+    },
+    "actions": {
+      "loadMore": "Cargar más"
     }
   },
   "enums": {
